02-all-main-thread

--- a/picture-filter-app/index.html
+++ b/picture-filter-app/index.html
@@ -19,25 +19,42 @@
       }
     </style>
     <link rel="stylesheet" href="bulma.min.css" />
+    <script src="filters.js"></script>
   </head>
 
   <body>
     <div class="container">
       <div class="section">
-          <label class="button is-info" for="fileInput">Select an image</label>
-          <input class="is-sr-only" id="fileInput" type="file" accept=".jpg, .jpeg, .png" />
+        <label class="button is-info" for="fileInput">Select an image</label>
+        <input
+          class="is-sr-only"
+          id="fileInput"
+          type="file"
+          accept=".jpg, .jpeg, .png"
+        />
       </div>
       <h1 class="title is-1">Original</h1>
       <canvas id="original-canvas"></canvas>
       <div class="section">
-        <button class="button is-link is-outlined">Grayscale</button>
-        <button class="button is-link is-outlined">Transparency</button>
-        <button class="button is-link is-outlined">Sephia</button>
+        <button
+          class="button is-link is-outlined"
+          onclick="onClick('grayscale')"
+        >
+          Grayscale
+        </button>
+        <button
+          class="button is-link is-outlined"
+          onclick="onClick('transparency')"
+        >
+          Transparency
+        </button>
+        <button class="button is-link is-outlined" onclick="onClick('sephia')">
+          Sephia
+        </button>
       </div>
       <div id="loading">
         Loading...
       </div>
-      <progress id="loading" class="progress is-info" value="0" max="100"></progress>
       <h1 class="title is-1">Filter</h1>
       <canvas id="filtered-canvas"></canvas>
     </div>
@@ -48,6 +65,35 @@
       const filteredCanvas = document.getElementById('filtered-canvas');
       const loading = document.getElementById('loading');
 
+      loading.style.display = 'none';
+
+      const ctx = canvas.getContext('2d');
+      const filtertedCtx = filteredCanvas.getContext('2d');
+
+      function onClick(filter) {
+        loading.style.display = 'block';
+
+        const imageData = ctx.getImageData(0, 0, canvas.width, canvas.height);
+
+        applyFilter(imageData, filter);
+
+        filtertedCtx.putImageData(imageData, 0, 0);
+
+        loading.style.display = 'none';
+      }
+
+      fileInput.addEventListener('change', (evt) => {
+        const file = fileInput.files[0];
+
+        createImageBitmap(file).then((bitmap) => {
+          canvas.width = bitmap.width;
+          canvas.height = bitmap.height;
+          filteredCanvas.width = bitmap.width;
+          filteredCanvas.height = bitmap.height;
+
+          ctx.drawImage(bitmap, 0, 0);
+        });
+      });
     </script>
   </body>
 </html>
