06-register-service-worker

--- a/offline-analytics/index.html
+++ b/offline-analytics/index.html
@@ -17,5 +17,11 @@
         I want tarta
       </button>
     </article>
+
+    <script>
+      navigator.serviceWorker.register('/sw.js').then(() => {
+        console.log('SW registered');
+      });
+    </script>
   </body>
 </html>
